Fixed file structure to allow loading of Server project; Created basic login window for client

--- a/Holocron Client/Holocron Client.vbproj
+++ b/Holocron Client/Holocron Client.vbproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Holocron_Client</RootNamespace>
-    <StartupObject>Sub Main</StartupObject>
+    <StartupObject>Holocron_Client.My.MyApplication</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
   </PropertyGroup>
